fix: placeholder overlap

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -21,3 +21,7 @@
     transform: translateX(-100%);
   }
 }
+
+.ql-editor.ql-blank::before {
+  content: none;
+}
